engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__portable_image_echo_renders_once.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
expression: rendered
---
› [Image #1] describe
