engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_exceeded_error.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: lines_to_single_string(&lines)
---
■ rate limit exceeded: Please try again in 10s.
