engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_reset_available_hint.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: rendered
---
• You have 2 usage limit resets available. Run /usage to use one.
