engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_reset_confirmation.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 80)"
---
      Use this reset?
  Us  Full reset (Weekly + 5 hr) · Expires 09:39 on 18 Jun 2026
  1

      1. Yes, use reset  Reset your weekly and 5-hour usage limits.
› 1.› 2. No, go back     Choose a different reset
  2.
      enter confirm · esc back
  enter choose · esc back
